# paperless-ai-titles

./: .env.example  .gitignore  .releaserc.json  Dockerfile  README.md  docker-compose.localllm.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  renovate.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: queue_and_persistence.md
scripts/: paperless_post_script.sh
src/paperless_ai_titles/: __init__.py  api_schemas.py  document_eligibility.py  fastapi_app.py  management_cli.py  queue_factory.py  rq_task_handlers.py  rq_worker_runner.py
src/paperless_ai_titles/clients/: llm_client.py  paperless_client.py
src/paperless_ai_titles/core/: __init__.py  config.py  database.py  logging_config.py  models.py  status_sets.py
src/paperless_ai_titles/repositories/: document_records.py  processing_jobs.py  settings.py  unit_of_work.py
src/paperless_ai_titles/routers/: api.py  ui.py
src/paperless_ai_titles/services/: jobs.py  onboarding.py  processing.py  scanner.py  settings.py
static/css/: app.css
templates/: base.html  index.html  job_history.html  settings.html  setup.html
tests/: conftest.py  test_clients_and_queue.py  test_document_eligibility.py  test_fastapi_routes.py  test_jobs_service.py  test_onboarding_service.py  test_processing_service.py  test_repositories.py  test_scanner_service.py  test_settings_service.py
